merge release verifier 1.6.0.0-RC3